[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/ControlLayer.gd" type="Script" id=1]

[node name="ControlLayer" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 85.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ButtonsContainer"]
margin_right = 1675.0
margin_bottom = 20.0

[node name="SettingsButton" type="Button" parent="Control/ButtonsContainer/HBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Settings"

[node name="ResetButton" type="Button" parent="Control/ButtonsContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 115.0
margin_bottom = 20.0
text = "Reset"

[node name="ConsoleContainer" type="MarginContainer" parent="Control"]
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/ConsoleContainer"]
margin_right = 460.0
margin_bottom = 160.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ConsoleContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ConsoleContainer/ColorRect/ScrollContainer"]
__meta__ = {
"_edit_use_anchors_": false
}
